Chnage the file

--- a/JenkinsFile
+++ b/JenkinsFile
@@ -3,12 +3,17 @@ pipeline {
     stages {
         stage('Build') {
             steps {
-                sh 'javac HelloWorld.java'
+                echo 'Building..'
             }
         }
-        stage('Run') {
+        stage('Test') {
             steps {
-                sh 'java HelloWorld'
+                echo 'Testing..'
+            }
+        }
+        stage('Deploy') {
+            steps {
+                echo 'Deploying....'
             }
         }
     }
